[gd_scene load_steps=11 format=3 uid="uid://mainmenu001"]

[ext_resource type="Script" uid="uid://dl75jbu4uw5kj" path="res://scripts/ui/main_menu.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://dhpw4ba14djwf" path="res://assets/goth_bg.PNG" id="2_bg"]
[ext_resource type="Texture2D" uid="uid://c7vbo8thkwobd" path="res://assets/ChibiLogo.png" id="3_logo"]
[ext_resource type="Texture2D" uid="uid://b24diams0cx0c" path="res://assets/bouquet.png" id="4_bouquet"]
[ext_resource type="Texture2D" uid="uid://cpt3x7xonq4cg" path="res://assets/goth_trio_splash.PNG" id="5_splash"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_stats"]
bg_color = Color(0.06, 0.04, 0.1, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.35, 0.7, 0.8)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn"]
bg_color = Color(0.12, 0.08, 0.2, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.45, 0.85, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_hover"]
bg_color = Color(0.18, 0.12, 0.3, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.85, 0.65, 1, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bouquet"]
bg_color = Color(0.15, 0.1, 0.2, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.9, 0.5, 0.7, 0.9)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_banner"]
bg_color = Color(0.15, 0.1, 0.2, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.3, 0.7, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.4, 0.2, 0.5, 0.4)
shadow_size = 6

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
expand_mode = 1
stretch_mode = 6

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.3)

[node name="SafeArea" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="MainHBox" type="HBoxContainer" parent="SafeArea"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="LeftPanel" type="VBoxContainer" parent="SafeArea/MainHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="LogoContainer" type="CenterContainer" parent="SafeArea/MainHBox/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="Logo" type="TextureRect" parent="SafeArea/MainHBox/LeftPanel/LogoContainer"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 2
texture = ExtResource("3_logo")
expand_mode = 1
stretch_mode = 5

[node name="SplashContainer" type="CenterContainer" parent="SafeArea/MainHBox/LeftPanel"]
layout_mode = 2

[node name="GothSplash" type="TextureRect" parent="SafeArea/MainHBox/LeftPanel/SplashContainer"]
texture_filter = 1
custom_minimum_size = Vector2(350, 150)
layout_mode = 2
texture = ExtResource("5_splash")
expand_mode = 1
stretch_mode = 5

[node name="SubtitleLabel" type="Label" parent="SafeArea/MainHBox/LeftPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.75, 1, 1)
theme_override_font_sizes/font_size = 20
text = "A Deckbuilding Roguelite"
horizontal_alignment = 1

[node name="StatsPanel" type="Panel" parent="SafeArea/MainHBox/LeftPanel"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_stats")

[node name="StatsMargin" type="MarginContainer" parent="SafeArea/MainHBox/LeftPanel/StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 12

[node name="StatsContainer" type="VBoxContainer" parent="SafeArea/MainHBox/LeftPanel/StatsPanel/StatsMargin"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="StatsTitle" type="Label" parent="SafeArea/MainHBox/LeftPanel/StatsPanel/StatsMargin/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.5, 1)
theme_override_font_sizes/font_size = 18
text = "YOUR RECORDS"
horizontal_alignment = 1

[node name="Divider" type="ColorRect" parent="SafeArea/MainHBox/LeftPanel/StatsPanel/StatsMargin/StatsContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
color = Color(0.5, 0.4, 0.6, 0.4)

[node name="StatsGrid" type="GridContainer" parent="SafeArea/MainHBox/LeftPanel/StatsPanel/StatsMargin/StatsContainer"]
layout_mode = 2
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 4
columns = 2

[node name="RunsLabel" type="Label" parent="SafeArea/MainHBox/LeftPanel/StatsPanel/StatsMargin/StatsContainer/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "Runs: 0"

[node name="WinsLabel" type="Label" parent="SafeArea/MainHBox/LeftPanel/StatsPanel/StatsMargin/StatsContainer/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.95, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "Wins: 0"

[node name="BestFloorLabel" type="Label" parent="SafeArea/MainHBox/LeftPanel/StatsPanel/StatsMargin/StatsContainer/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.35, 1)
theme_override_font_sizes/font_size = 16
text = "Best: Floor 0"

[node name="PlaystyleLabel" type="Label" parent="SafeArea/MainHBox/LeftPanel/StatsPanel/StatsMargin/StatsContainer/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = "Style: Unknown"

[node name="BestScoreLabel" type="Label" parent="SafeArea/MainHBox/LeftPanel/StatsPanel/StatsMargin/StatsContainer/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.9, 1, 1)
theme_override_font_sizes/font_size = 16
text = "Best Score: 0"

[node name="CompletionsLabel" type="Label" parent="SafeArea/MainHBox/LeftPanel/StatsPanel/StatsMargin/StatsContainer/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.75, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "Completions: 0"

[node name="RightPanel" type="VBoxContainer" parent="SafeArea/MainHBox"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="PlayButton" type="Button" parent="SafeArea/MainHBox/RightPanel"]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.95, 0.85, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "START RUN"

[node name="SettingsButton" type="Button" parent="SafeArea/MainHBox/RightPanel"]
custom_minimum_size = Vector2(300, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.85, 0.8, 0.95, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "SETTINGS"

[node name="CreditsButton" type="Button" parent="SafeArea/MainHBox/RightPanel"]
custom_minimum_size = Vector2(300, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.85, 0.8, 0.95, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "CREDITS"

[node name="SkinsButton" type="Button" parent="SafeArea/MainHBox/RightPanel"]
custom_minimum_size = Vector2(300, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.7, 0.85, 1)
theme_override_colors/font_hover_color = Color(1, 0.9, 0.95, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "SKINS"

[node name="InfoButton" type="Button" parent="SafeArea/MainHBox/RightPanel"]
custom_minimum_size = Vector2(300, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.7, 0.9, 1, 1)
theme_override_colors/font_hover_color = Color(0.9, 1, 1, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "INFO"

[node name="QuitButton" type="Button" parent="SafeArea/MainHBox/RightPanel"]
custom_minimum_size = Vector2(300, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.7, 0.6, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "QUIT"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
offset_right = 90.0
offset_bottom = 25.0
theme_override_colors/font_color = Color(0.6, 0.5, 0.8, 0.7)
theme_override_font_sizes/font_size = 15
text = "v1.0-FULL"
horizontal_alignment = 2

[node name="BouquetPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -130.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = 55.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_bouquet")

[node name="HBox" type="HBoxContainer" parent="BouquetPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 5.0
offset_right = -8.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="BouquetIcon" type="TextureRect" parent="BouquetPanel/HBox"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
texture = ExtResource("4_bouquet")
expand_mode = 1
stretch_mode = 5

[node name="BouquetLabel" type="Label" parent="BouquetPanel/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.75, 0.85, 1)
theme_override_font_sizes/font_size = 20
text = "0"

[node name="GothBanner" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -265.0
offset_top = -110.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_banner")

[node name="Content" type="VBoxContainer" parent="GothBanner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 10.0
offset_right = -12.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="BannerTitle" type="Label" parent="GothBanner/Content"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.6, 0.95, 1)
theme_override_font_sizes/font_size = 20
text = "GOTH SEASON"
horizontal_alignment = 1

[node name="BannerDesc" type="Label" parent="GothBanner/Content"]
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.65, 0.85, 1)
theme_override_font_sizes/font_size = 14
text = "New dark aesthetic skins!"
horizontal_alignment = 1

[node name="SkinsPreview" type="Label" parent="GothBanner/Content"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.5, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "Yuuechka | Morpheya"
horizontal_alignment = 1
